# RedactedAudioToolbox

./: .gitignore  EliteTMHelper2_Found.txt  EliteTMHelper2_OPS_Found.txt  LICENSE  Meat Katie - Hard to find tracks & lost remixes - 2025 (WEB - FLAC - 24bit Lossless)-6235399.torrent  Pedro Sampaio - SequÃªncias #1 - 2025 (WEB - FLAC - 24bit Lossless)-6181036.torrent  README.md  RedactedAudioToolbox.spec  Teddy Robin (æ³°è¿ªç¾è³) - MULTIVERSE OF POLYGRAM 55TH ANNIVERSARY - Teddy Robin - 2025 (WEB - FLAC - 24bit Lossless)-6254862.torrent  Thesaurus Rex - Greatest Hits. - 2025 (WEB - FLAC - 24bit Lossless)-6244027.torrent  api.md  dependency_manager.py  elitetmhelper2.py  errors.py  flac_downsampler.py  i18n.py  lossless_checker.py  main.py  pipeline_manager.py  psiangel - Archival Rave Tracks 2022-2024 - 2025 (WEB - FLAC - 24bit Lossless)-6169690.torrent  push_to_qb.py  pyproject.toml  qbittorrent_client.py  redacted_session.py  rthook_numpy_scipy.py  take_screenshot.py  test_ctk.py  test_gui.py  test_syntax.py  webui.py
aafs/: benchmark.py  cli.py
core/: cache_manager.py  config_manager.py  context.py  database.py  database_queue.py  events.py  globals.py  legacy_bridge.py  log_checker.py  logger.py  paths.py  pipeline_adapter.py  rclone_helper.py  searcher.py  secrets.py  site_config.py  state_manager.py  task_manager.py  tasks.py  transmission_client.py  worker_pool.py
cross_seed/: __init__.py  engine.py  metadata.py  red_checker.py
gui/: audit_tab.py  discovery_tab.py  failed_tasks_tab.py  pipeline_tab.py  search_tab.py  seeding_tab.py  widgets.py
(+72 files in other folders)
