[project]
name = "RedactedAudioToolbox"
version = "0.2.0"
description = "All-in-one desktop toolkit for audiophiles & Private Tracker power users"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "customtkinter>=5.2.2",
    "requests>=2.32.5",
    "torf>=4.3.1",
    "pillow>=12.1.0",
    "librosa>=0.11.0",
    "numpy>=2.4.0",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "RapidFuzz>=3.14.3",
    "PyYAML>=6.0.1",
    "platformdirs>=4.0.0",
    "mutagen>=1.47.0",
    "transmission-rpc>=7.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "jinja2>=3.1.3",
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
